[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "xhtml2pdf>=0.2.17",
]
